<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.android.lsindoortracker.MeasuringDataActivity">
    <TextView
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_bssid"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />
    <TextView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_dBm_variation"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_below="@+id/text_bssid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_dbms"
        android:id="@+id/text_dbms"
        android:layout_alignTop="@+id/text_dBm_variation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_alignBottom="@+id/text_dBm_variation"
        android:gravity="center" />
    <TextView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_iterations_variation"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/text_dBm_variation"
        android:layout_alignLeft="@+id/text_dBm_variation"
        android:layout_alignStart="@+id/text_dBm_variation"
        android:gravity="center"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_iterations"
        android:id="@+id/text_iterations"
        android:layout_alignTop="@+id/text_iterations_variation"
        android:layout_alignLeft="@+id/text_dbms"
        android:layout_alignStart="@+id/text_dbms"
        android:layout_above="@+id/text_meters_variation"
        android:gravity="center"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_meters_variation"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/text_iterations_variation"
        android:layout_alignLeft="@+id/text_iterations_variation"
        android:layout_alignStart="@+id/text_iterations_variation"
        android:gravity="center"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_meters"
        android:id="@+id/text_meters"
        android:layout_alignTop="@+id/text_meters_variation"
        android:layout_alignLeft="@+id/text_iterations"
        android:layout_alignStart="@+id/text_iterations"
        android:layout_alignBottom="@+id/text_meters_variation"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:id="@+id/button_start"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/text_meters_variation"
        android:layout_alignLeft="@+id/text_meters_variation"
        android:layout_alignStart="@+id/text_meters_variation"
        android:layout_alignRight="@+id/text_meters_variation"
        android:layout_alignEnd="@+id/text_meters_variation"
        android:onClick="nextMeasurement"
        android:singleLine="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:id="@+id/button_stop"
        android:layout_alignTop="@+id/button_start"
        android:layout_alignLeft="@+id/text_meters"
        android:layout_alignStart="@+id/text_meters"
        android:layout_alignRight="@+id/text_meters"
        android:layout_alignEnd="@+id/text_meters"
        android:onClick="stopMeasurements"/>
</RelativeLayout>